# RenderingTP

./: CMakeLists.txt  README.md
opengl-framework/: .gitmodules  CMakeLists.txt  TODO.md  TP.md
opengl-framework/CMakeUtils/: README.md  files_and_folders.cmake
opengl-framework/include/opengl-framework/: opengl-framework.hpp
opengl-framework/lib/glad/include/glad/: gl.h
opengl-framework/lib/glm/glm/detail/: func_integer.inl  qualifier.hpp  type_quat.hpp
opengl-framework/lib/img/: CMakeLists.txt  README.md
opengl-framework/lib/img/src/: Image.h  Load.cpp  Load.h  SizeU.h
opengl-framework/src/: Camera.cpp  Camera.hpp  EventsCallbacks.hpp  Mesh.cpp  Mesh.hpp  RenderTarget.cpp  RenderTarget.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  glfw.hpp  handle_error.cpp  handle_error.hpp  make_absolute_path.cpp  make_absolute_path.hpp  opengl-framework.cpp
opengl-framework/tests/: CMakeLists.txt  main.cpp
opengl-framework/tests/res/: fragment.glsl  vertex.glsl
res/: fragment.glsl  vertex.glsl
src/: main.cpp
